# bitburner-go-rl

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __main__.py  __main__curriculum.py  __train_curriculum__.py  dev.Dockerfile  dev.dockerignore  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  prod.Dockerfile  prod.dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt  train_env.Dockerfile
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-quality.yml  codeql.yml  compatibility.yml
docker/: docker-entrypoint.sh  setup_game_env.py
docs/: index.md
src/config/: env.py
src/curriculum/: __init__.py  curriculum.py
src/env/: __init__.py  client.py  go_env.py
src/league/: __init__.py  checkpoint.py  curriculum.py  evaluation.py  opponents.py  rollout.py
src/train/: __init__.py  model.py  train.py
src/utils/logging/: config.py  setup.py
tests/: test_curriculum.py  test_func.py  test_go_env.py  test_league.py  test_train.py
